@@ -262,60 +262,11 @@ TODO:
 			<END>}</END>
 		</SPAN_REGEXP>
 
-		<SEQ_REGEXP TYPE="KEYWORD4" HASH_CHAR="$" DELEGATE="OBJECT_PHP_LITERAL2">[\$]+[a-zA-Z_\x7f-\xff][a-zA-Z0-9_\x7f-\xff]*(?=(\[\$?[\s\w'"]+\])?-&gt;)</SEQ_REGEXP>
-		<MARK_PREVIOUS TYPE="KEYWORD4">::</MARK_PREVIOUS>
-
 		<!-- Vars like "${foo}" (does not work for objects/methods) -->
 		<SEQ_REGEXP HASH_CHAR="$" TYPE="KEYWORD3">[\$]+\{[a-zA-Z_\x7f-\xff][a-zA-Z0-9_\x7f-\xff]*\}</SEQ_REGEXP>
 
 		<IMPORT DELEGATE="PHP_VAR" />
 	</RULES>
-
-	<!-- Helper for class references in rule PHP_LITERAL2 ("foo") -->
-	<RULES SET="OBJECT_PHP_LITERAL2" DEFAULT="KEYWORD4" ESCAPE="\"> <!-- TODO: ESCAPE should not be needed, see http://sourceforge.net/tracker/index.php?func=detail&aid=1600458&group_id=588&atid=100588 -->
-		<SPAN TYPE="OPERATOR" DELEGATE="PHP">
-			<BEGIN>[</BEGIN>
-			<END>]</END>
-		</SPAN>
-
-		<!-- Recurse members: -->
-		<SEQ_REGEXP TYPE="KEYWORD4" HASH_CHAR="-&gt;" DELEGATE="OBJECT_PHP_LITERAL2">-&gt;\w*</SEQ_REGEXP>
-
-		<!-- Operators delegate back to PHP_LITERAL2 {{{ -->
-		<SEQ_REGEXP DELEGATE="PHP_LITERAL2">\s</SEQ_REGEXP>
-		<SEQ TYPE="LITERAL2" DELEGATE="PHP_LITERAL2">'</SEQ>
-		<SEQ TYPE="LITERAL2" DELEGATE="PHP_LITERAL2">`</SEQ>
-		<SEQ TYPE="LITERAL2" DELEGATE="PHP_LITERAL2">!</SEQ>
-		<SEQ TYPE="LITERAL2" DELEGATE="PHP_LITERAL2">%</SEQ>
-		<SEQ TYPE="LITERAL2" DELEGATE="PHP_LITERAL2">&amp;</SEQ>
-		<SEQ TYPE="LITERAL2" DELEGATE="PHP_LITERAL2">&gt;</SEQ>
-		<SEQ TYPE="LITERAL2" DELEGATE="PHP_LITERAL2">&lt;</SEQ>
-		<SEQ TYPE="LITERAL2" DELEGATE="PHP_LITERAL2">*</SEQ>
-		<SEQ TYPE="LITERAL2" DELEGATE="PHP_LITERAL2">/</SEQ>
-		<SEQ TYPE="LITERAL2" DELEGATE="PHP_LITERAL2">+</SEQ>
-		<SEQ TYPE="LITERAL2" DELEGATE="PHP_LITERAL2">,</SEQ>
-		<SEQ TYPE="LITERAL2" DELEGATE="PHP_LITERAL2">-</SEQ><!-- "->" gets handled before -->
-		<SEQ TYPE="LITERAL2" DELEGATE="PHP_LITERAL2">.</SEQ>
-		<SEQ_REGEXP HASH_CHAR="/" TYPE="LITERAL2" DELEGATE="PHP_LITERAL2">/(?!/)</SEQ_REGEXP>
-		<SEQ_REGEXP HASH_CHAR=":" TYPE="LITERAL2" DELEGATE="PHP_LITERAL2">:(?!:)</SEQ_REGEXP><!-- not "::" -->
-		<SEQ TYPE="LITERAL2" DELEGATE="PHP_LITERAL2">;</SEQ>
-		<SEQ TYPE="LITERAL2" DELEGATE="PHP_LITERAL2">=</SEQ>
-		<SEQ TYPE="LITERAL2" DELEGATE="PHP_LITERAL2">?</SEQ>
-		<SEQ TYPE="LITERAL2" DELEGATE="PHP_LITERAL2">@</SEQ>
-		<SEQ TYPE="LITERAL2" DELEGATE="PHP_LITERAL2">[</SEQ>
-		<SEQ TYPE="LITERAL2" DELEGATE="PHP_LITERAL2">]</SEQ>
-		<SEQ TYPE="LITERAL2" DELEGATE="PHP_LITERAL2">^</SEQ>
-		<SEQ TYPE="LITERAL2" DELEGATE="PHP_LITERAL2">`</SEQ>
-		<SEQ TYPE="LITERAL2" DELEGATE="PHP_LITERAL2">{</SEQ>
-		<SEQ TYPE="LITERAL2" DELEGATE="PHP_LITERAL2">|</SEQ>
-		<SEQ TYPE="LITERAL2" DELEGATE="PHP_LITERAL2">}</SEQ>
-		<SEQ TYPE="LITERAL2" DELEGATE="PHP_LITERAL2">~</SEQ>
-		<SEQ TYPE="LITERAL2" DELEGATE="PHP_LITERAL2">(</SEQ>
-		<SEQ TYPE="LITERAL2" DELEGATE="PHP_LITERAL2">)</SEQ>
-		<SEQ TYPE="LITERAL2" DELEGATE="PHP_LITERAL2">\</SEQ>
-		<!-- }}} -->
-	</RULES>
-
 
 	<!-- PHP literal in backticks, where variables get parsed; based on PHP_LITERAL2 -->
 	<RULES SET="PHP_LITERAL3" DEFAULT="LITERAL3" ESCAPE="\">
@@ -325,60 +276,11 @@ TODO:
 			<END>}</END>
 		</SPAN_REGEXP>
 
-		<SEQ_REGEXP TYPE="KEYWORD4" HASH_CHAR="$" DELEGATE="OBJECT_PHP_LITERAL3">[\$]+[a-zA-Z_\x7f-\xff][a-zA-Z0-9_\x7f-\xff]*(?=(\[\$?[\s\w'"]+\])?-&gt;)</SEQ_REGEXP>
-		<MARK_PREVIOUS TYPE="KEYWORD4">::</MARK_PREVIOUS>
-
 		<!-- Vars like "${foo}" (does not work for objects/methods) -->
 		<SEQ_REGEXP HASH_CHAR="$" TYPE="KEYWORD3">[\$]+\{[a-zA-Z_\x7f-\xff][a-zA-Z0-9_\x7f-\xff]*\}</SEQ_REGEXP>
 
 		<IMPORT DELEGATE="PHP_VAR" />
 	</RULES>
-
-	<!-- Helper for class references in rule PHP_LITERAL3 (`foo`) -->
-	<RULES SET="OBJECT_PHP_LITERAL3" DEFAULT="KEYWORD4" ESCAPE="\"> <!-- TODO: ESCAPE should not be needed, see http://sourceforge.net/tracker/index.php?func=detail&aid=1600458&group_id=588&atid=100588 -->
-		<SPAN TYPE="OPERATOR" DELEGATE="PHP">
-			<BEGIN>[</BEGIN>
-			<END>]</END>
-		</SPAN>
-
-		<!-- Recurse members: -->
-		<SEQ_REGEXP TYPE="KEYWORD4" HASH_CHAR="-&gt;" DELEGATE="OBJECT_PHP_LITERAL3">-&gt;\w*</SEQ_REGEXP>
-
-		<!-- Operators delegate back to PHP_LITERAL3 {{{ -->
-		<SEQ_REGEXP DELEGATE="PHP_LITERAL3">\s</SEQ_REGEXP>
-		<SEQ TYPE="LITERAL3" DELEGATE="PHP_LITERAL3">"</SEQ>
-		<SEQ TYPE="LITERAL3" DELEGATE="PHP_LITERAL3">'</SEQ>
-		<SEQ TYPE="LITERAL3" DELEGATE="PHP_LITERAL3">!</SEQ>
-		<SEQ TYPE="LITERAL3" DELEGATE="PHP_LITERAL3">%</SEQ>
-		<SEQ TYPE="LITERAL3" DELEGATE="PHP_LITERAL3">&amp;</SEQ>
-		<SEQ TYPE="LITERAL3" DELEGATE="PHP_LITERAL3">&gt;</SEQ>
-		<SEQ TYPE="LITERAL3" DELEGATE="PHP_LITERAL3">&lt;</SEQ>
-		<SEQ TYPE="LITERAL3" DELEGATE="PHP_LITERAL3">*</SEQ>
-		<SEQ TYPE="LITERAL3" DELEGATE="PHP_LITERAL3">/</SEQ>
-		<SEQ TYPE="LITERAL3" DELEGATE="PHP_LITERAL3">+</SEQ>
-		<SEQ TYPE="LITERAL3" DELEGATE="PHP_LITERAL3">,</SEQ>
-		<SEQ TYPE="LITERAL3" DELEGATE="PHP_LITERAL3">-</SEQ><!-- "->" gets handled before -->
-		<SEQ TYPE="LITERAL3" DELEGATE="PHP_LITERAL3">.</SEQ>
-		<SEQ_REGEXP HASH_CHAR="/" TYPE="LITERAL3" DELEGATE="PHP_LITERAL3">/(?!/)</SEQ_REGEXP>
-		<SEQ_REGEXP HASH_CHAR=":" TYPE="LITERAL3" DELEGATE="PHP_LITERAL3">:(?!:)</SEQ_REGEXP><!-- not "::" -->
-		<SEQ TYPE="LITERAL3" DELEGATE="PHP_LITERAL3">;</SEQ>
-		<SEQ TYPE="LITERAL3" DELEGATE="PHP_LITERAL3">=</SEQ>
-		<SEQ TYPE="LITERAL3" DELEGATE="PHP_LITERAL3">?</SEQ>
-		<SEQ TYPE="LITERAL3" DELEGATE="PHP_LITERAL3">@</SEQ>
-		<SEQ TYPE="LITERAL3" DELEGATE="PHP_LITERAL3">[</SEQ>
-		<SEQ TYPE="LITERAL3" DELEGATE="PHP_LITERAL3">]</SEQ>
-		<SEQ TYPE="LITERAL3" DELEGATE="PHP_LITERAL3">^</SEQ>
-		<SEQ TYPE="LITERAL3" DELEGATE="PHP_LITERAL3">`</SEQ>
-		<SEQ TYPE="LITERAL3" DELEGATE="PHP_LITERAL3">{</SEQ>
-		<SEQ TYPE="LITERAL3" DELEGATE="PHP_LITERAL3">|</SEQ>
-		<SEQ TYPE="LITERAL3" DELEGATE="PHP_LITERAL3">}</SEQ>
-		<SEQ TYPE="LITERAL3" DELEGATE="PHP_LITERAL3">~</SEQ>
-		<SEQ TYPE="LITERAL3" DELEGATE="PHP_LITERAL3">(</SEQ>
-		<SEQ TYPE="LITERAL3" DELEGATE="PHP_LITERAL3">)</SEQ>
-		<SEQ TYPE="LITERAL3" DELEGATE="PHP_LITERAL3">\</SEQ>
-		<!-- }}} -->
-	</RULES>
-
 
 	<!-- PHP heredoc blocks, where variables get parsed; see PHP_LITERAL2 -->
 	<RULES SET="PHP_LITERAL4" DEFAULT="LITERAL4" ESCAPE="\">
@@ -388,61 +290,11 @@ TODO:
 			<END>}</END>
 		</SPAN_REGEXP>
 
-		<SEQ_REGEXP TYPE="KEYWORD4" HASH_CHAR="$" DELEGATE="OBJECT_PHP_LITERAL4">[\$]+[a-zA-Z_\x7f-\xff][a-zA-Z0-9_\x7f-\xff]*(?=(\[\$?[\s\w'"]+\])?-&gt;)</SEQ_REGEXP>
-		<MARK_PREVIOUS TYPE="KEYWORD4">::</MARK_PREVIOUS>
-
 		<!-- Vars like "${foo}" (does not work for objects/methods) -->
 		<SEQ_REGEXP HASH_CHAR="$" TYPE="KEYWORD3">[\$]+\{[a-zA-Z_\x7f-\xff][a-zA-Z0-9_\x7f-\xff]*\}</SEQ_REGEXP>
 
 		<IMPORT DELEGATE="PHP_VAR" />
 	</RULES>
-
-	<!-- Helper for class references in rule PHP_LITERAL4 ("<<< FOO .. FOO") -->
-	<RULES SET="OBJECT_PHP_LITERAL4" DEFAULT="KEYWORD4" ESCAPE="\"> <!-- TODO: ESCAPE should not be needed, see http://sourceforge.net/tracker/index.php?func=detail&aid=1600458&group_id=588&atid=100588 -->
-		<SPAN TYPE="OPERATOR" DELEGATE="PHP">
-			<BEGIN>[</BEGIN>
-			<END>]</END>
-		</SPAN>
-
-		<!-- Recurse members: -->
-		<SEQ_REGEXP TYPE="KEYWORD4" HASH_CHAR="-&gt;" DELEGATE="OBJECT_PHP_LITERAL4">-&gt;\w*</SEQ_REGEXP>
-
-		<!-- Operators delegate back to PHP_LITERAL4 {{{ -->
-		<SEQ_REGEXP DELEGATE="PHP_LITERAL4">\s</SEQ_REGEXP>
-		<SEQ TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">'</SEQ>
-		<SEQ TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">"</SEQ>
-		<SEQ TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">`</SEQ>
-		<SEQ TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">!</SEQ>
-		<SEQ TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">%</SEQ>
-		<SEQ TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">&amp;</SEQ>
-		<SEQ TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">&gt;</SEQ>
-		<SEQ TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">&lt;</SEQ>
-		<SEQ TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">*</SEQ>
-		<SEQ TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">/</SEQ>
-		<SEQ TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">+</SEQ>
-		<SEQ TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">,</SEQ>
-		<SEQ TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">-</SEQ><!-- "->" gets handled before -->
-		<SEQ TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">.</SEQ>
-		<SEQ_REGEXP HASH_CHAR="/" TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">/(?!/)</SEQ_REGEXP>
-		<SEQ_REGEXP HASH_CHAR=":" TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">:(?!:)</SEQ_REGEXP><!-- not "::" -->
-		<SEQ TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">;</SEQ>
-		<SEQ TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">=</SEQ>
-		<SEQ TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">?</SEQ>
-		<SEQ TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">@</SEQ>
-		<SEQ TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">[</SEQ>
-		<SEQ TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">]</SEQ>
-		<SEQ TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">^</SEQ>
-		<SEQ TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">`</SEQ>
-		<SEQ TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">{</SEQ>
-		<SEQ TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">|</SEQ>
-		<SEQ TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">}</SEQ>
-		<SEQ TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">~</SEQ>
-		<SEQ TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">(</SEQ>
-		<SEQ TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">)</SEQ>
-		<SEQ TYPE="LITERAL4" DELEGATE="PHP_LITERAL4">\</SEQ>
-		<!-- }}} -->
-	</RULES>
-
 
 	<!-- Helper for class / interface definition -->
 	<RULES SET="DEF_CLASS" DEFAULT="KEYWORD4">
@@ -685,10 +537,6 @@ TODO:
 		<SEQ TYPE="OPERATOR">{</SEQ>
 		<SEQ TYPE="OPERATOR">}</SEQ>
 		<!-- }}} -->
-
-		<!-- to OBJECT_PHP: (Class-)Variables/Methods -->
-		<SEQ_REGEXP TYPE="KEYWORD4" HASH_CHAR="$" DELEGATE="OBJECT_PHP">[\$]+[a-zA-Z_\x7f-\xff][a-zA-Z0-9_\x7f-\xff]*(?=(\[\$?[\s\w'"]+\])?-&gt;)</SEQ_REGEXP>
-		<MARK_PREVIOUS TYPE="KEYWORD4">::</MARK_PREVIOUS>
 
 		<!-- handle "new" keyword: -->
 		<SEQ_REGEXP TYPE="KEYWORD1" HASH_CHAR="new" AT_WORD_START="TRUE" DELEGATE="PHP_VAR_NEW_KW">new\s+</SEQ_REGEXP>
